<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gdfgdf">

        <ImageView android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageToUpload"
            android:background="@drawable/rounded_corner_black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/etName"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_blue"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:hint="@string/etName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/etAge"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_blue"
            android:textColor="#ffffff"
            android:hint="@string/etAge"
            android:textColorHint="#ffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textPassword"
            android:layout_margin="10dp"

            android:id="@+id/etPassword2"
            android:background="@drawable/rounded_corner_blue"
            android:textColor="#ffffff"
            android:hint="@string/etPassword2"
            android:textColorHint="#ffffff" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bRegister"
            android:text="@string/bRegister"
            android:background="@drawable/rounded_corner_black"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</ScrollView>